fixed spacing of import.php

--- a/_style.scss
+++ b/_style.scss
@@ -4104,3 +4104,7 @@ a[title*='[Spoilers]'],a[title*='[Spoiler]'] {
 #reports input[value="Update"] {
     margin-top: 10px;
 }
+
+#import select, #import input {
+    margin-bottom: 10px;
+}
